styles: mysupersitter case study completed

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                     <div class="freelancer-portfolio__item mix ui-design web-design has_fade_anim">
                                         <div class="pimg" data-cursor-text="Coming soon" data-cursor="lg">
                                             <a href="javascript:void(0)">
-                                                <img src="assets/imgs/portfolio/ceviant/ceviant-preview.webp" alt="Signature Bank">
+                                                <img src="assets/imgs/portfolio/ceviant/ceviant-preview.webp" alt="Ceviant Finance">
                                             </a>
                                         </div>
 
@@ -366,17 +366,17 @@
 
                                     <!-- MySuperSitter Project -->
                                     <div class="freelancer-portfolio__item mix ui-design mobile-design has_fade_anim">
-                                        <div class="pimg" data-cursor-text="Coming soon" data-cursor="lg">
-                                            <a href="javascript:void(0)">
+                                        <div class="pimg" data-cursor-text="View Work" data-cursor="lg">
+                                            <a href="my-works/mysupersitter.html">
                                                 <img src="assets/imgs/portfolio/mysupersitter/supersitter-preview.webp" alt="MySuperSitter">
                                             </a>
                                         </div>
 
                                         <div class="freelancer-portfolio__content">
-                                            <a href="javascript:void(0)" data-cursor-text="Coming soon" data-cursor="lg">
+                                            <a href="my-works/mysupersitter.html" data-cursor-text="Coming soon" data-cursor="lg">
                                                 <h3 class="freelancer-portfolio__title">MySuperSitter</h3>
                                             </a>
-                                            <p>Mobile UI/UX Design - Case study in progress</p>
+                                            <p>Mobile UI/UX Design - View case study</p>
                                         </div>
                                     </div>
 
