--- a/my-works/mysupersitter.html
+++ b/my-works/mysupersitter.html
@@ -303,13 +303,13 @@
                       <p>I created a wireframe for a <b>MySuperSitter</b> app to visualize the user interface and experience, ensuring the design is user-friendly, intuitive, and meets the needs of parents and sitters before high fidelity designs to streamline app features more with client needs.
                       </p>
                       <a href="../assets/imgs/portfolio/mysupersitter/wireframe-one.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-one.webp" alt="Portfolio Thumbnail">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-one.webp" alt="Wireframe One">
                       </a>
                       <a href="../assets/imgs/portfolio/mysupersitter/wireframe-two.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-two.webp" alt="Portfolio Thumbnail">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-two.webp" alt="Wireframe Two">
                       </a>
                       <a href="../assets/imgs/portfolio/mysupersitter/wireframe-three.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-three.webp" alt="Portfolio Thumbnail">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-three.webp" alt="Wireframe Three">
                       </a>
                     </div>
 
@@ -318,42 +318,42 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <h5 class="mb-2 color-gray">Typography</h5>
-                          <ul class="projectFeatures">
-                            <li>+ Enrolling children</li>
-                            <li>+ Creating and posting jobs</li>
-                            <li>+ Reaching out to sitters</li>
-                            <li>+ Children development statistics</li>
-                          </ul>
+                          <a href="../assets/imgs/portfolio/mysupersitter/typography.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                            <img class="img-fluid mb-4 border" src="../assets/imgs/portfolio/mysupersitter/typography.webp" alt="Typography">
+                          </a>
                         </div>
                         <div class="col-lg-6">
                           <h5 class="mb-2 color-gray">Color Palette</h5>
-                          <ul class="projectFeatures">
-                            <li>+ Setting availability and rate</li>
-                            <li>+ Tracking sitting progress</li>
-                            <li>+ Real time notifications</li>
-                            <li>+ Update child development statistics</li>
-                          </ul>
+                          <a href="../assets/imgs/portfolio/mysupersitter/color-system.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                            <img class="img-fluid mb-4 border" src="../assets/imgs/portfolio/mysupersitter/color-system.webp" alt="Color Palette">
+                          </a>
                         </div>
                       </div>
                     </div>
 
 
                     <div class="project_overview">
-                      <h2 class="project_subtag">Typography</h2>
-                      <p>The basic idea was to find a balance between the thin, wispy sans-serif used to indicate a
-                        ‘futuristic‘ tone, and a bold, masculine font synonymous with ‘construction‘. We came up with
-                        something in the middle, leaning towards lighter-weighted fonts, but still with a hint of that
-                        blocky ‘construction’ vibe. We use Chaney for general display and when we want to drive
-                        attention
-                        to
-                        the content, and the technical and geometric Sora font for the body copy and paste overall
-                        hierachy.
+                      <h2 class="project_subtag">Final Designs</h2>
+                      <p>The UI designs done with Figma ensured a clear, user-friendly layout, streamline development, and facilitate stakeholder's feedbacks.
                       </p>
+                      <a href="../assets/imgs/portfolio/mysupersitter/design-one.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-one.webp" alt="Final Design One">
+                      </a>
+                      <a href="../assets/imgs/portfolio/mysupersitter/design-two.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-two.webp" alt="Final Design One">
+                      </a>
+                      <a href="../assets/imgs/portfolio/mysupersitter/design-three.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-three.webp" alt="Final Design One">
+                      </a>
+                      <a href="../assets/imgs/portfolio/mysupersitter/design-four.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-four.webp" alt="Final Design One">
+                      </a>
+                      <a href="../assets/imgs/portfolio/mysupersitter/design-five.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-five.webp" alt="Final Design One">
+                      </a>
                     </div>
-                    <div class="project-sm-thumb">
-                      <img class="img-fluid mb-4" src="https://placehold.co/1290x700" alt="image">
-                      <img class="img-fluid mb-4" src="https://placehold.co/1290x700" alt="image">
-                    </div>
+
+                    <p class="text-center">Request to view more ......</p>
 
                     <h2 class="h1 text-center my-4">Thank you for watching</h2>
                   </div>
@@ -374,33 +374,35 @@
               </div>
               <div class="pdesigner-portfolio__flex">
                 <div class="pdesigner-portfolio__item">
-                  <div class="pdesigner-portfolio__thumb">
-                    <a href="portfolio-details-light.html">
-                      <img src="https://placehold.co/585x355" alt="Portfolio Thumbnail">
+                  <div class="pdesigner-portfolio__thumb" data-cursor-text="Coming soon" data-cursor="lg">
+                    <a href="javascript:void(0)">
+                      <img src="../assets/imgs/portfolio/signature/signature-preview.webp" alt="Signature Bank">
                     </a>
                   </div>
                   <div class="pdesigner-portfolio__content">
                     <ul>
-                      <li><a href="portfolio-light.html" class="pdesigner-portfolio__category">UI Design</a> </li>
-                      <li><a href="portfolio-details-light.html" class="pdesigner-portfolio__title">User Experience</a>
+                      <li><a href="javascript:void(0)" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
+                      <li><a href="javascript:void(0)" class="pdesigner-portfolio__title">Signature Bank</a>
                       </li>
                     </ul>
                   </div>
                 </div>
+
                 <div class="pdesigner-portfolio__item">
-                  <div class="pdesigner-portfolio__thumb">
-                    <a href="portfolio-details-light.html">
-                      <img src="https://placehold.co/585x355" alt="Portfolio Thumbnail">
+                  <div class="pdesigner-portfolio__thumb" data-cursor-text="Coming soon" data-cursor="lg">
+                    <a href="javascript:void(0)">
+                      <img src="../assets/imgs/portfolio/ceviant/ceviant-preview.webp" alt="Ceviant Finance">
                     </a>
                   </div>
                   <div class="pdesigner-portfolio__content">
                     <ul>
-                      <li><a href="portfolio-light.html" class="pdesigner-portfolio__category">UI Design</a> </li>
-                      <li><a href="portfolio-details-light.html" class="pdesigner-portfolio__title">User Experience</a>
+                      <li><a href="javascript:void(0)" class="pdesigner-portfolio__category">Web UI/UX Design</a> </li>
+                      <li><a href="javascript:void(0)" class="pdesigner-portfolio__title">Ceviant Finance</a>
                       </li>
                     </ul>
                   </div>
                 </div>
+
               </div>
             </div>
           </section>
@@ -500,7 +502,14 @@
   <script src="../assets/js/error-handling.js"></script>
   <script src="../assets/js/offcanvas.js"></script>
   <script src="../assets/js/wc-cursor.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKR6L47YN3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-LKR6L47YN3');
+  </script>
 
 
 </body>
