styles: removed profile image on homepage to have work peaking on showcase easier.

--- a/index.html
+++ b/index.html
@@ -221,15 +221,6 @@
                 <div class="col-xxl-12">
                   <div class="freelancer-hero__inner">
                     <div class="freelancer-hero__left">
-                      <div class="award-img">
-<!--                        <div class="award__item-2 has_fade_anim" data-fade-from="left" data-delay="0.7">-->
-<!--                          <img src="assets/imgs/award/w-light.png" class="show-dark" alt="Award Image">-->
-<!--                          <img src="assets/imgs/award/w-black.png" class="show-light" alt="Award Image">-->
-<!--                          <h1 class="award__title-2">Award Winner</h1>-->
-<!--                          <h2 class="award__status-2">Nominee</h2>-->
-<!--                        </div>-->
-                      </div>
-
                       <div class="wc-btns-group-wrap">
                         <div class="wc-btns-group has_fade_anim" data-fade-from="left" data-delay="0.85">
                           <div class="btn-wrapper cf_btn_circle">
@@ -242,59 +233,29 @@
                           </div>
                         </div>
                       </div>
-
-                      <div class="work-process-flex">
-<!--                        <div class="work_process-2 has_fade_anim" data-fade-from="left" data-delay="1">-->
-<!--                          <a href="https://www.youtube.com/watch?v=PYuPmNFHTog" class="button video-popup">-->
-<!--                            <i class="fa-solid fa-play"></i></a>-->
-<!--                          <span>work <br> Process</span>-->
-<!--                        </div>-->
-                      </div>
                     </div>
 
-                    <div class="freelancer-hero__mid pt-120 pb-130">
+                    <div class="freelancer-hero__mid pt-120 pb-90">
                       <div class="freelancer-hero-title-wrap">
                         <h2 class="freelancer-hero-title has_fade_anim" data-fade-from="top" data-ease="bounce">Endurance Ekhoragbon<br> Product <img src="assets/imgs/hero/3-sm.png" alt="Image">
                           <span>Designer</span> <br> Based in Canada
                         </h2>
                       </div>
-                      <div class="image-frame cf_image has_fade_anim" data-ease="bounce" data-duration="1.5">
-                        <img src="assets/imgs/hero/hero-intro.png" alt="Profile Image">
-                      </div>
                     </div>
 
                     <div class="freelancer-hero__right">
-                      <div class="project-wrap">
-                        <div class="freelancer-counter__item">
-                          <div class="counter__item has_fade_anim" data-fade-from="right" data-delay="0.7">
-                            <div class="number">
-                              <h3 class="count wc-counter">60+</h3>
-                            </div>
-                            <div class="text">
-                              <p>Project <br> completed</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
                       <div class="about-me">
                         <div class="wrapper has_fade_anim" data-fade-from="right" data-delay="0.85">
                           <div class="cf_image">
                             <img src="assets/imgs/shape/9.png" alt="Shape Image">
                           </div>
                           <div class="cf_text">
-                            <p>A Product Designer with a passion for designing beautiful and intuitive user experiences. <span>based in Canada</span>. Also a User Interface Developer who focuses on writing clean, elegant and efficient code. <span>Pixel Perfectionist</span>
+                            <p>
+                                A passionate Product Designer dedicated to crafting beautiful and intuitive user experiences. Also an adept <span>User Interface Developer</span> who writes clean, elegant, and efficient code. <span>Pixel perfectionist.</span>
                             </p>
                           </div>
                         </div>
                       </div>
-<!--                      <div class="scroll__down-wrapper has_fade_anim" data-fade-from="right" data-delay="1">-->
-<!--                        <a href="#">-->
-<!--                          <div class="scroll__down">-->
-<!--                            <span><i class="fa-solid fa-arrow-down"></i></span>-->
-<!--                            <p>Scroll <br> Down</p>-->
-<!--                          </div>-->
-<!--                        </a>-->
-<!--                      </div>-->
                     </div>
                   </div>
                 </div>
