fix: url fix for supersitter

--- a/my-works/mysupersitter.html
+++ b/my-works/mysupersitter.html
@@ -154,9 +154,9 @@
       <button class="offcanvas__close" data-bs-dismiss="offcanvas"><i class="fa-solid fa-xmark"></i></button>
       <div class="offcanvas__body">
         <div class="offcanvas__logo">
-          <a href="index.html">
-            <img src="assets/imgs/logo/favicon.png" class="show-dark" alt="Offcanvas Logo">
-            <img src="assets/imgs/logo/favicon.png" class="show-light" alt="Offcanvas Logo">
+          <a href="../index.html">
+            <img src="../assets/imgs/logo/favicon.png" class="show-dark" alt="Offcanvas Logo">
+            <img src="../assets/imgs/logo/favicon.png" class="show-light" alt="Offcanvas Logo">
           </a>
           <p>Crafting seamless user experiences with design precision and coding expertise.</p>
         </div>
