--- a/portfolio.html
+++ b/portfolio.html
@@ -270,16 +270,16 @@
 
 
                       <!-- MySuperSitter Project -->
-                      <div class="pdesigner-portfolio__item mix ui-design mobile-design" data-cursor-text="Coming soon" data-cursor="lg">
+                      <div class="pdesigner-portfolio__item mix ui-design mobile-design" data-cursor-text="View Work" data-cursor="lg">
                         <div class="pdesigner-portfolio__thumb">
-                          <a href="javascript:void(0)">
-                            <img src="assets/imgs/portfolio/mysupersitter/supersitter-preview.webp" alt="Signature Bank">
+                          <a href="my-works/mysupersitter.html">
+                            <img src="assets/imgs/portfolio/mysupersitter/supersitter-preview.webp" alt="MySuperSitter Bank">
                           </a>
                         </div>
                         <div class="pdesigner-portfolio__content">
                           <ul>
-                            <li><a href="javascript:void(0)" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
-                            <li><a href="javascript:void(0)" class="pdesigner-portfolio__title">MySuperSitter</a>
+                            <li><a href="my-works/mysupersitter.html" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
+                            <li><a href="my-works/mysupersitter.html" class="pdesigner-portfolio__title">MySuperSitter</a>
                             </li>
                           </ul>
                         </div>
