styles: ceviant case study fully added

--- a/about.html
+++ b/about.html
@@ -319,7 +319,7 @@
               <div class="row align-items-start">
                 <div class="col-md-4 col-sm-12">
                   <div class="about__education-img cf_img img_anim_reveal">
-                    <img src="assets/imgs/about/about-intro-second.webp" alt="Image">
+                    <img src="assets/imgs/about/about-intro-second.webp" alt="About Me">
                   </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
