--- a/index.html
+++ b/index.html
@@ -311,17 +311,17 @@
 
                                     <!-- Ceviant Project -->
                                     <div class="freelancer-portfolio__item mix ui-design web-design has_fade_anim">
-                                        <div class="pimg" data-cursor-text="Coming soon" data-cursor="lg">
-                                            <a href="javascript:void(0)">
+                                        <div class="pimg" data-cursor-text="View Work" data-cursor="lg">
+                                            <a href="my-works/ceviant.html">
                                                 <img src="assets/imgs/portfolio/ceviant/ceviant-preview.webp" alt="Ceviant Finance">
                                             </a>
                                         </div>
 
                                         <div class="freelancer-portfolio__content">
-                                            <a href="javascript:void(0)" data-cursor-text="Coming soon" data-cursor="lg">
+                                            <a href="my-works/ceviant.html" data-cursor-text="View Work" data-cursor="lg">
                                                 <h3 class="freelancer-portfolio__title">Ceviant Finance</h3>
                                             </a>
-                                            <p>Web UI/UX Design - Case study in progress</p>
+                                            <p>Web UI/UX Design - View case study</p>
                                         </div>
                                     </div>
 
