--- a/portfolio.html
+++ b/portfolio.html
@@ -253,16 +253,16 @@
                       </div>
 
                       <!-- Ceviant Project -->
-                      <div class="pdesigner-portfolio__item mix ui-design web-design"  data-cursor-text="Coming soon" data-cursor="lg">
+                      <div class="pdesigner-portfolio__item mix ui-design web-design"  data-cursor-text="View Work" data-cursor="lg">
                         <div class="pdesigner-portfolio__thumb">
-                          <a href="javascript:void(0)">
+                          <a href="my-works/ceviant.html">
                             <img src="assets/imgs/portfolio/ceviant/ceviant-preview.webp" alt="Ceviant Finance">
                           </a>
                         </div>
                         <div class="pdesigner-portfolio__content">
                           <ul>
-                            <li><a href="javascript:void(0)" class="pdesigner-portfolio__category">Web UI/UX Design</a> </li>
-                            <li><a href="javascript:void(0)" class="pdesigner-portfolio__title">Ceviant Finance</a>
+                            <li><a href="my-works/ceviant.html" class="pdesigner-portfolio__category">Web UI/UX Design</a> </li>
+                            <li><a href="my-works/ceviant.html" class="pdesigner-portfolio__title">Ceviant Finance</a>
                             </li>
                           </ul>
                         </div>
