--- a/my-works/ceviant.html
+++ b/my-works/ceviant.html
@@ -22,7 +22,7 @@
   <meta name="author" content="Endurance (Eddie) Ekhoragbon | Senior Product Designer">
 
 
-  <title>MySuperSitter - eddieos | Senior Product Designer.</title>
+  <title>Ceviant Finance - eddieos | Senior Product Designer.</title>
 
   <!-- Fav Icon -->
   <link rel="apple-touch-icon" sizes="72x72" href="../apple-touch-icon.png">
@@ -63,19 +63,13 @@
       <div class="animation-preloader">
         <div class="spinner"></div>
         <div class="txt-loading">
-          <span data-text="M" class="characters">M</span>
-          <span data-text="Y" class="characters">Y</span>
-          <span data-text="S" class="characters">S</span>
-          <span data-text="U" class="characters">U</span>
-          <span data-text="P" class="characters">P</span>
+          <span data-text="C" class="characters">C</span>
           <span data-text="E" class="characters">E</span>
-          <span data-text="R" class="characters">R</span>
-          <span data-text="S" class="characters">S</span>
+          <span data-text="V" class="characters">V</span>
           <span data-text="I" class="characters">I</span>
+          <span data-text="A" class="characters">A</span>
+          <span data-text="N" class="characters">N</span>
           <span data-text="T" class="characters">T</span>
-          <span data-text="T" class="characters">T</span>
-          <span data-text="E" class="characters">E</span>
-          <span data-text="R" class="characters">R</span>
         </div>
       </div>
       <div class="loader-section section-left"></div>
@@ -224,138 +218,110 @@
           <section class="portfolio__area-2 pt-130 pb-130">
             <div class="container line ptf-70">
               <div class="project_detail_cover cf_parallax_image">
-                <img src="../assets/imgs/portfolio/mysupersitter/intro-cover.webp" alt="image" data-speed="0.9">
+                <img src="../assets/imgs/portfolio/ceviant/intro-cover.webp" alt="image" data-speed="0.9">
               </div>
               <div class="row">
                 <div class="col-xxl-12">
                   <div class="project__details">
-                    <h1 class="project_details_title">MySuperSitter</h1>
+                    <h1 class="project_details_title">Ceviant Finance</h1>
                     <ul class="project_info">
                       <li>
                         <span class="title">Client</span>
-                        <p class="info">MySuperSitter</p>
+                        <p class="info">Ceviant</p>
                       </li>
                       <li>
-                        <span class="title">Category</span>
-                        <p class="info">Mobile UI/UX Design</p>
+                        <span class="title">Role</span>
+                        <p class="info">Visual UI Designer</p>
                       </li>
                       <li>
-                        <span class="title">Start Date</span>
-                        <p class="info">02/08/2019</p>
-                      </li>
-                      <li>
-                        <span class="title">End Date</span>
-                        <p class="info">09/01/2020</p>
+                        <span class="title">Duration</span>
+                        <p class="info">4 months</p>
                       </li>
                       <li>
                         <span class="title">Tools</span>
-                        <p class="info">Figjam, Figma</p>
+                        <p class="info">Mind Mapping, Figma</p>
+                      </li>
+                      <li>
+                        <span class="title">Status</span>
+                        <p class="info">Live deployment</p>
                       </li>
                     </ul>
 
                     <div class="project_overview">
                       <h2 class="project_subtag">The Problem</h2>
-                      <h5 class="mb-2 color-gray">Connecting Baby Sitters with Parents</h5>
-                      <p>Seymour, a passionate entrepreneur, who aims to address the challenge of connecting babysitters and parents for seamless babysitting experiences. This is particularly relevant during the coronavirus pandemic, where there are concerns about verifying the vaccination status of both parties to avoid any conflicts.</p>
+                      <h5 class="mb-2 color-gray">Managing Liquidity Efficiently for Companies</h5>
+                      <p>Ceviant Finance needs a web-based tool to offer comprehensive solutions for companies of all sizes. Key features include Cash Management & Payment, Cross-border Payments, Foreign Exchange, Trade Solutions, and Escrow & Agency Services. These functionalities streamline financial operations, enhance global transactions, and provide robust support, ensuring efficient business processes.</p>
                     </div>
 
                     <div class="project_overview">
                       <h2 class="project_subtag">What I did</h2>
-                      <h5 class="mb-2 color-gray">User Flow, Wireframes and a High Fidelity Mock Up</h5>
-                      <p>In my role, I developed a style guide for our mobile app in order to keep consistency throughout the product. This began with understanding product requirements, user needs, and product goals, followed by creating a user flow. I then constructed wireframes for layout and functionality. The process continued with the creation of high-fidelity mock-ups, incorporating all final product elements. I consistently participated in ideation and brainstorming, striving to maintain relevance and elevate user experience in the evolving mobile app landscape.</p>
-                    </div>
-
-                    <div class="project_overview">
-                      <h2 class="project_subtag">Core Product Features</h2>
-                      <div class="row">
-                        <div class="col-lg-6">
-                          <h5 class="mb-2 color-gray">Parents</h5>
-                          <ul class="projectFeatures">
-                            <li>+ Enrolling children</li>
-                            <li>+ Creating and posting jobs</li>
-                            <li>+ Reaching out to sitters</li>
-                            <li>+ Children development statistics</li>
-                          </ul>
-                        </div>
-                        <div class="col-lg-6">
-                          <h5 class="mb-2 color-gray">Sitters</h5>
-                          <ul class="projectFeatures">
-                            <li>+ Setting availability and rate</li>
-                            <li>+ Tracking sitting progress</li>
-                            <li>+ Real time notifications</li>
-                            <li>+ Update child development statistics</li>
-                          </ul>
-                        </div>
+                      <h5 class="mb-2 color-gray">Translating Software Requirement to Product Features</h5>
+                      <p>I used Mind Map Flow for the web application design to visually organize and connect ideas, ensuring a clear, comprehensive understanding of user requirements and features. This approach helped streamline the design process, promote creativity, and facilitate effective collaboration among team members.</p>
+                      <div class="project-sm-thumb">
+                        <a href="../assets/imgs/portfolio/ceviant/mind-mapping.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                          <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/mind-mapping.webp" alt="Mind Mapping">
+                        </a>
+                        <a href="../assets/imgs/portfolio/ceviant/sketch.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                          <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/sketch.webp" alt="">
+                        </a>
                       </div>
-                    </div>
-
-                    <div class="project_overview">
-                      <h2 class="project_subtag">User Flow Diagram</h2>
-                      <p>I created a user flow diagram for a <b>MySuperSitter</b> app to visualize and optimize the user experience, ensuring intuitive navigation and efficient task completion.
-                      </p>
-                      <a href="../assets/imgs/portfolio/mysupersitter/flow-chart.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/flow-chart.webp" alt="Flow Chart">
-                      </a>
-                    </div>
-
-                    <div class="project_overview">
-                      <h2 class="project_subtag">Wireframes</h2>
-                      <p>I created a wireframe for a <b>MySuperSitter</b> app to visualize the user interface and experience, ensuring the design is user-friendly, intuitive, and meets the needs of parents and sitters before high fidelity designs to streamline app features more with client needs.
-                      </p>
-                      <a href="../assets/imgs/portfolio/mysupersitter/wireframe-one.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-one.webp" alt="Wireframe One">
-                      </a>
-                      <a href="../assets/imgs/portfolio/mysupersitter/wireframe-two.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-two.webp" alt="Wireframe Two">
-                      </a>
-                      <a href="../assets/imgs/portfolio/mysupersitter/wireframe-three.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/wireframe-three.webp" alt="Wireframe Three">
-                      </a>
                     </div>
 
                     <div class="project_overview">
                       <h2 class="project_subtag">Style Guides</h2>
-                      <div class="row">
-                        <div class="col-lg-6">
-                          <h5 class="mb-2 color-gray">Typography</h5>
-                          <a href="../assets/imgs/portfolio/mysupersitter/typography.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                            <img class="img-fluid mb-4 border" src="../assets/imgs/portfolio/mysupersitter/typography.webp" alt="Typography">
-                          </a>
-                        </div>
-                        <div class="col-lg-6">
-                          <h5 class="mb-2 color-gray">Color Palette</h5>
-                          <a href="../assets/imgs/portfolio/mysupersitter/color-system.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                            <img class="img-fluid mb-4 border" src="../assets/imgs/portfolio/mysupersitter/color-system.webp" alt="Color Palette">
-                          </a>
-                        </div>
-                      </div>
+                      <h5 class="mb-2 color-gray">Color Palette & Typography</h5>
+                      <p>I chose the IBM Plex Sans font for its modern, clean, and highly legible design, which enhances readability and provides a professional aesthetic for the product. The color style was created through careful selection of a harmonious palette that aligns with the brand identity, ensuring visual appeal and consistency throughout the user interface.
+                      </p>
+                      <a href="../assets/imgs/portfolio/ceviant/color-typography.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/color-typography.webp" alt="Color & Typography">
+                      </a>
+                    </div>
+
+                    <div class="project_overview">
+                      <h2 class="project_subtag">Visual UI Design For Ceviant’s Financing Tool</h2>
+                      <p>
+                        I managed the Design System, strictly adhering to brand guidelines to ensure visual consistency and integrity. I created multiple application design iterations using best practices to optimize user experience. Additionally, I developed design components tailored to product needs, ensuring flexibility and reusability. By considering all product features, I mapped seamless user interactions, resulting in an intuitive and engaging interface.
+                      </p>
+                      <h5 class="mb-2 color-gray">Design Components</h5>
+                      <a href="../assets/imgs/portfolio/ceviant/design-components.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-components.webp" alt="Design Components">
+                      </a>
                     </div>
 
 
+
                     <div class="project_overview">
-                      <h2 class="project_subtag">Final Designs</h2>
+                      <h2 class="project_subtag">Final Designs Preview</h2>
                       <p>The UI designs done with Figma ensured a clear, user-friendly layout, streamline development, and facilitate stakeholder's feedbacks.
                       </p>
-                      <a href="../assets/imgs/portfolio/mysupersitter/design-one.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-one.webp" alt="Final Design One">
+                      <a href="../assets/imgs/portfolio/ceviant/design-one.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-one.webp" alt="Final Design One">
                       </a>
-                      <a href="../assets/imgs/portfolio/mysupersitter/design-two.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-two.webp" alt="Final Design Two">
+                      <a href="../assets/imgs/portfolio/ceviant/design-two.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-two.webp" alt="Final Design Two">
                       </a>
-                      <a href="../assets/imgs/portfolio/mysupersitter/design-three.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-three.webp" alt="Final Design Three">
+                      <a href="../assets/imgs/portfolio/ceviant/design-three.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-three.webp" alt="Final Design Three">
                       </a>
-                      <a href="../assets/imgs/portfolio/mysupersitter/design-four.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-four.webp" alt="Final Design Four">
+                      <a href="../assets/imgs/portfolio/ceviant/design-four.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-four.webp" alt="Final Design Four">
                       </a>
-                      <a href="../assets/imgs/portfolio/mysupersitter/design-five.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
-                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/mysupersitter/design-five.webp" alt="Final Design Five">
+                      <a href="../assets/imgs/portfolio/ceviant/design-five.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-five.webp" alt="Final Design Five">
+                      </a>
+                      <a href="../assets/imgs/portfolio/ceviant/design-six.webp" class="button image-popup" data-cursor-text="Click to Enlarge" data-cursor="lg" data-effect="mfp-zoom-in">
+                        <img class="img-fluid mb-4" src="../assets/imgs/portfolio/ceviant/design-six.webp" alt="Final Design Six">
                       </a>
                     </div>
 
                     <p class="text-center">Request to view more ......</p>
-
-                    <h2 class="h1 text-center my-4">Thank you for watching</h2>
+                    <div class="row mb-5">
+                      <h2 class="project_subtag">Key Take Away</h2>
+                      <p>
+                        A key takeaway from this project is that it's not always necessary to strictly adhere to all design processes to create usable, efficient, enjoyable, and functional products. Utilizing the right UX tools can save valuable time (which we really needed) and facilitate efficient collaboration.
+                      </p>
+                    </div>
+                    <h2 class="h1 text-center my-4">Thanks for your time</h2>
                   </div>
                 </div>
               </div>
@@ -390,14 +356,14 @@
 
                 <div class="pdesigner-portfolio__item">
                   <div class="pdesigner-portfolio__thumb" data-cursor-text="View Work" data-cursor="lg">
-                    <a href="ceviant.html">
-                      <img src="../assets/imgs/portfolio/ceviant/ceviant-preview.webp" alt="Ceviant Finance">
+                    <a href="mysupersitter.html">
+                      <img src="../assets/imgs/portfolio/mysupersitter/supersitter-preview.webp" alt="Ceviant Finance">
                     </a>
                   </div>
                   <div class="pdesigner-portfolio__content">
                     <ul>
-                      <li><a href="ceviant.html" class="pdesigner-portfolio__category">Web UI/UX Design</a> </li>
-                      <li><a href="ceviant.html" class="pdesigner-portfolio__title">Ceviant Finance</a>
+                      <li><a href="mysupersitter.html" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
+                      <li><a href="mysupersitter.html" class="pdesigner-portfolio__title">MySuperSitter</a>
                       </li>
                     </ul>
                   </div>
