styles: added signature bank project case study partially.

--- a/index.html
+++ b/index.html
@@ -295,17 +295,17 @@
 
                                     <!-- Signature Project -->
                                     <div class="freelancer-portfolio__item mix ui-design mobile-design has_fade_anim">
-                                        <div class="pimg" data-cursor-text="Coming soon" data-cursor="lg">
-                                            <a href="javascript:void(0)">
+                                        <div class="pimg" data-cursor-text="View Work" data-cursor="lg">
+                                            <a href="my-works/signature.html">
                                                 <img src="assets/imgs/portfolio/signature/signature-preview.webp" alt="Signature Bank">
                                             </a>
                                         </div>
 
                                         <div class="freelancer-portfolio__content">
-                                            <a href="javascript:void(0)" data-cursor-text="Coming soon" data-cursor="lg">
+                                            <a href="my-works/signature.html" data-cursor-text="Coming soon" data-cursor="lg">
                                                 <h3 class="freelancer-portfolio__title">Signature Bank</h3>
                                             </a>
-                                            <p>Mobile UI/UX Design - Case study in progress</p>
+                                            <p>Mobile UI/UX Design - View case study</p>
                                         </div>
                                     </div>
 
