--- a/portfolio.html
+++ b/portfolio.html
@@ -239,14 +239,14 @@
                       <!-- Signature Project -->
                       <div class="pdesigner-portfolio__item mix ui-design mobile-design"  data-cursor-text="Coming soon" data-cursor="lg">
                         <div class="pdesigner-portfolio__thumb">
-                          <a href="javascript:void(0)">
+                          <a href="my-works/signature.html">
                             <img src="assets/imgs/portfolio/signature/signature-preview.webp" alt="Signature Bank">
                           </a>
                         </div>
                         <div class="pdesigner-portfolio__content">
                           <ul>
-                            <li><a href="javascript:void(0)" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
-                            <li><a href="javascript:void(0)" class="pdesigner-portfolio__title">Signature Bank</a>
+                            <li><a href="my-works/signature.html" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
+                            <li><a href="my-works/signature.html" class="pdesigner-portfolio__title">Signature Bank</a>
                             </li>
                           </ul>
                         </div>
