--- a/my-works/mysupersitter.html
+++ b/my-works/mysupersitter.html
@@ -374,15 +374,15 @@
               </div>
               <div class="pdesigner-portfolio__flex">
                 <div class="pdesigner-portfolio__item">
-                  <div class="pdesigner-portfolio__thumb" data-cursor-text="Coming soon" data-cursor="lg">
-                    <a href="javascript:void(0)">
+                  <div class="pdesigner-portfolio__thumb" data-cursor-text="View Work" data-cursor="lg">
+                    <a href="signature.html">
                       <img src="../assets/imgs/portfolio/signature/signature-preview.webp" alt="Signature Bank">
                     </a>
                   </div>
                   <div class="pdesigner-portfolio__content">
                     <ul>
-                      <li><a href="javascript:void(0)" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
-                      <li><a href="javascript:void(0)" class="pdesigner-portfolio__title">Signature Bank</a>
+                      <li><a href="signature.html" class="pdesigner-portfolio__category">Mobile UI/UX Design</a> </li>
+                      <li><a href="signature.html" class="pdesigner-portfolio__title">Signature Bank</a>
                       </li>
                     </ul>
                   </div>
