fix: view work added to cursor

--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,7 @@
                     <div class="pdesigner-portfolio__flex has_pdportfolio_animation">
 
                       <!-- Signature Project -->
-                      <div class="pdesigner-portfolio__item mix ui-design mobile-design"  data-cursor-text="Coming soon" data-cursor="lg">
+                      <div class="pdesigner-portfolio__item mix ui-design mobile-design"  data-cursor-text="View Work" data-cursor="lg">
                         <div class="pdesigner-portfolio__thumb">
                           <a href="my-works/signature.html">
                             <img src="assets/imgs/portfolio/signature/signature-preview.webp" alt="Signature Bank">
