styles: removed CV downloading feature

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
                             Works</a>
                           </div>
 
-                          <div class="btn-wrapper cf_btn_circle">
-                            <a class="wc-btn-circle-light btn-hover-bgchange btn-item"  href="assets/imgs/media/Endurance's%20Resume.pdf" download>Download <br> CV</a>
-                          </div>
+<!--                          <div class="btn-wrapper cf_btn_circle">-->
+<!--                            <a class="wc-btn-circle-light btn-hover-bgchange btn-item"  href="assets/imgs/media/Endurance's%20Resume.pdf" download>Download <br> CV</a>-->
+<!--                          </div>-->
                         </div>
                       </div>
                     </div>
