fix: link fix for signature bank homepage.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                         </div>
 
                                         <div class="freelancer-portfolio__content">
-                                            <a href="my-works/signature.html" data-cursor-text="Coming soon" data-cursor="lg">
+                                            <a href="my-works/signature.html" data-cursor-text="View Work" data-cursor="lg">
                                                 <h3 class="freelancer-portfolio__title">Signature Bank</h3>
                                             </a>
                                             <p>Mobile UI/UX Design - View case study</p>
