styles: temporary update to email address.

--- a/my-works/ceviant.html
+++ b/my-works/ceviant.html
@@ -401,11 +401,11 @@
                   <!--                  </div>-->
                   <!--                  <div class="footer__email">-->
                   <!--                    <h3 class="footer__title-3">Email</h3>-->
-                  <!--                    <p class="">e_ekhoragbon@yahoo.com</p>-->
+                  <!--                    <p class="">ekhoragbon.endurance.ca@gmail.com</p>-->
                   <!--                  </div>-->
                   <div class="footer__address">
                     <h3 class="footer__title-3">Email</h3>
-                    <p>e_ekhoragbon@yahoo.com</p>
+                    <p>ekhoragbon.endurance.ca@gmail.com</p>
                   </div>
                   <div class="footer__address">
                     <h3 class="footer__title-3">address</h3>
