--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                       <li>Name <span>:</span> <strong>Endurance Ekhoragbon</strong></li>
                       <li>Live in <span>:</span> <strong>Ontario, Canada</strong></li>
 <!--                      <li>Phone <span>:</span> <strong>+(2) 870 174 302</strong></li>-->
-                      <li>Email <span>:</span> <strong>e_ekhoragbon@yahoo.com</strong></li>
+                      <li>Email <span>:</span> <strong>ekhoragbon.endurance.ca@gmail.com</strong></li>
                       <li>Experience <span>:</span> <strong>8+ years</strong></li>
                       <li>Availability <span>:</span> <strong>Online</strong></li>
                       <li>Github <span>:</span> <strong>eddieos</strong></li>
@@ -878,11 +878,11 @@
 <!--                  </div>-->
 <!--                  <div class="footer__email">-->
 <!--                    <h3 class="footer__title-3">Email</h3>-->
-<!--                    <p class="">e_ekhoragbon@yahoo.com</p>-->
+<!--                    <p class="">ekhoragbon.endurance.ca@gmail.com</p>-->
 <!--                  </div>-->
                   <div class="footer__address">
                     <h3 class="footer__title-3">Email</h3>
-                    <p>e_ekhoragbon@yahoo.com</p>
+                    <p>ekhoragbon.endurance.ca@gmail.com</p>
                   </div>
                   <div class="footer__address">
                     <h3 class="footer__title-3">address</h3>
