--- a/about.html
+++ b/about.html
@@ -480,11 +480,11 @@
                   <!--                  </div>-->
                   <!--                  <div class="footer__email">-->
                   <!--                    <h3 class="footer__title-3">Email</h3>-->
-                  <!--                    <p class="">ekhoragbon.endurance.ca@gmail.com</p>-->
+                  <!--                    <p class="">eddieosdesign@gmail.com</p>-->
                   <!--                  </div>-->
                   <div class="footer__address">
                     <h3 class="footer__title-3">Email</h3>
-                    <p>ekhoragbon.endurance.ca@gmail.com</p>
+                    <p>eddieosdesign@gmail.com</p>
                   </div>
                   <div class="footer__address">
                     <h3 class="footer__title-3">address</h3>
